@@ -19,6 +19,10 @@ imageDirs = [
         /** imageDirs **/
 ]
 
+// whether the build should fail when detecting broken image references
+// if this config is set to true all images will be embedded
+failOnMissingImages = true
+
 taskInputsDirs = ["${inputPath}/images"]
 
 taskInputsFiles = []
